Trying to fixing missing favicon on iPhone tabs devices

--- a/src/components/App/Header/Sidebar/Sidebar.css
+++ b/src/components/App/Header/Sidebar/Sidebar.css
@@ -51,7 +51,7 @@ button.hamburger.open span:nth-of-type(1) {
     overscroll-behavior: contain;
     list-style-type: none;
     box-shadow: 0px 20px 15px rgba(0, 0, 0, 0.33);
-    transition: background-color 0.7s ease, transform 0.5s ease, opacity 0.5s ease;
+    transition: background-color 0.7s ease, transform 0.5s ease;
 }
 
 .menuUl.show {
